--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             if(User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Roles">Home</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Roles">Roles</a>
                                 </li>
                             }
                         }
